[Human] tweak the AI generated code to make it up to the requirements.